--- a/gamevoice.vcxproj
+++ b/gamevoice.vcxproj
@@ -217,13 +217,13 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\clientlib_publicdefinitions.h" />
+    <ClInclude Include="include\teamlog\logtypes.h" />
+    <ClInclude Include="include\teamspeak\public_definitions.h" />
+    <ClInclude Include="include\teamspeak\public_errors.h" />
+    <ClInclude Include="include\teamspeak\public_errors_rare.h" />
+    <ClInclude Include="include\teamspeak\public_rare_definitions.h" />
     <ClInclude Include="include\plugin_definitions.h" />
     <ClInclude Include="include\plugin_events.h" />
-    <ClInclude Include="include\public_definitions.h" />
-    <ClInclude Include="include\public_errors.h" />
-    <ClInclude Include="include\public_errors_rare.h" />
-    <ClInclude Include="include\public_rare_definitions.h" />
     <ClInclude Include="include\ts3_functions.h" />
     <ClInclude Include="src\stdafx.h" />
     <ClInclude Include="src\ts3_helpers.h" />
